[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Enemies/Firebug/Idle.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Firebug/Attack.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Firemoth.gd" type="Script" id=3]
[ext_resource path="res://Entities/SoulJittering.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 7.0

[node name="Firemoth" type="KinematicBody2D" groups=["Persistent"]]
collision_layer = 24
collision_mask = 10
script = ExtResource( 3 )

[node name="Animations" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="AttackingTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="RayCast" type="RayCast2D" parent="."]
collision_mask = 3

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -350, -200 )
rect = Rect2( 0, 0, 700, 400 )
process_parent = true
physics_process_parent = true

[node name="SoulJittering" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="animation_finished" from="Animations" to="." method="_on_animation_finished"]
[connection signal="timeout" from="AttackingTimer" to="." method="_on_AttackingTimer_timeout"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
